# django-magiclink

./: .editorconfig  .gitignore  LICENSE.md  README.md  mypy.ini  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: test.yaml
magiclink/: __init__.py  apps.py  backends.py  forms.py  helpers.py  models.py  settings.py  urls.py  utils.py  views.py
magiclink/management/commands/: magiclink_clear_logins.py
magiclink/migrations/: 0001_initial.py  0002_magiclinkunsubscribe.py  0003_alter_magiclink_id_alter_magiclinkunsubscribe_id.py
magiclink/templates/: login.html  login_email.html  login_sent.html  signup.html
magiclink/templates/magiclink/: login.html  login_email.html  login_email.txt  login_failed.html  login_sent.html  signup.html
tests/: fixtures.py  models.py  settings.py  test_backend.py  test_clear_logins_command.py  test_helpers.py  test_login.py  test_login_verify.py  test_logout.py  test_models.py  test_settings.py  test_signup.py  test_utils.py  urls.py  views.py
