[tool.poetry]
name = "django-magiclink"
packages = [
    {include = "magiclink"}
]
version = "1.3.0"
description = "Passwordless authentication for Django with Magic Links"
authors = ["Matt Pye <pyematt@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/pyepye/django-magiclink"
homepage = "https://github.com/pyepye/django-magiclink"
keywords = ["magic link", "authentication", "passwordless"]

[tool.poetry.dependencies]
python = "^3.6"
Django = ">=2.1"
packaging = ">=20.9,<24.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
tox = "^3.28.0"
isort = {extras = ["pyproject"], version = "^5.4.2"}
django-stubs = "^1.5.0"
pytest = "^7.0.1"
pytest-cov = "^4.0.0"
pytest-django = "^4.5.2"
pytest-mock = "^3.2.0"
pytest-freezegun = "^0.4.1"

[tool.isort]
line_length = 79
multi_line_output = 5
known_third_party = "pytest"
known_first_party = "magiclink"
skip_glob = "__pycache__/*,venv/*,.venv/*,.tox/*,.mypy_cache"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
